--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^1.3.5",
     "@sanity/client": "^0.125.4",
-    "axios": "^0.16.2",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "d3": "^4.11.0",
     "d3-queue": "^3.0.7",
     "express": "^4.16.2",
-    "google-spreadsheet": "^2.0.4",
-    "morgan": "^1.9.0",
+    "google-spreadsheet": "^2.0.8",
+    "morgan": "^1.9.1",
+    "node-gyp": "^6.0.1",
     "node-sass-chokidar": "^0.0.3",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.1",
